# autoclipping

./: .env.example  .gitignore  AGENTS.md  INTEGRATED.md  QUICK_START.md  README.md  config.json  main.js  package-lock.json  package.json  pyproject.toml  requirements.txt
python/: transcript.py
remotion/: Root.jsx  ShortClip.jsx  utils.js
scripts/: add_subtitles.js  extract.js  face_reframe.py  manual_subtitle.js  render.js  setup.sh  subtitles_oneline.py
